--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kitten-anno-lib"
-version = "0.3.10"
+version = "0.3.15"
 edition = "2021"
 rust-version = "1.70"
 license = "MIT OR Apache-2.0"
@@ -15,17 +15,23 @@ readme = "README.md"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[features]
+default = ["std"]
+std = ["chrono/clock"]
+wasmbind = ["std", "chrono/wasmbind", "dep:wasm-bindgen"]
+
 [dependencies]
 lazy_static = "^1.4.0"
+chrono = { version = "^0.4.26", default-features = false }
+wasm-bindgen = { version = "^0.2.87", optional = true, default-features = false, features = ["std"] }
 
-[target.'cfg(not(target_family = "wasm"))'.dependencies]
-chrono = { version = "^0.4.26", default-features = false, features = ["clock"] }
+[target.'cfg(features = "std")'.dependencies]
+lazy_static = "^1.4.0"
 
-[target.'cfg(target_family = "wasm")'.dependencies]
-chrono = { version = "^0.4.26", default-features = false, features = ["clock", "wasmbind"] }
-wasm-bindgen = { version = "^0.2.87", default-features = false, features = ["std"] }
+[target.'cfg(not(features = "std"))'.dependencies]
+lazy_static = { version =  "^1.4.0", features = ["spin_no_std"] }
 
-[target.'cfg(target_family = "wasm")'.dev-dependencies]
+[dev-dependencies]
 wasm-bindgen-test = { version = "^0.3.37", default-features = false }
 
 [profile.release]
